@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t19911030
+MANIFEST for cm_tools, version t19911112
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
